06-bgImageSlider HTML done
started the project 6 and wrote the HTML

--- a/projects/021.js-60-projects/05-counter/index.html
+++ b/projects/021.js-60-projects/05-counter/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Counter</title>
     <style>
+        /*STARTED: April 14, 2020 >> FINISHED: 11:00AM, April 15, 2020*/
+        
         body {
             min-height: 100vh;
             display: flex;
