--- a/projects/021.js-60-projects/06-bgImageSlider/index.html
+++ b/projects/021.js-60-projects/06-bgImageSlider/index.html
@@ -15,6 +15,27 @@
             justify-content: center;
             background: url('img/taco.jpg')center/cover no-repeat;
         }
+        
+        .images {
+            background: yellow;
+            flex: 0 0 80%;
+            min-height: 70vh;
+            background: url('img/bg-1')center/cover no-repeat;
+            border-radius: 15px;
+            box-shadow: 5px 10px black;
+            position: relative;
+        }
+        
+        .btn {
+            display: inline-block;
+            background: white;
+            border: 3px solid green;
+            font-size: 1.5rem;
+            padding: 0.5rem;
+            border-radius: 20%;
+            box-shadow: 2px 5px black;
+            outline: none;
+        }
     </style>
 </head>
 
