project 7 - testimonails CSS 70% done

--- a/projects/021.js-60-projects/07-testimonials/index.html
+++ b/projects/021.js-60-projects/07-testimonials/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="fontawesome-i2svg-active fontawesome-i2svg-complete">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testimonials</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -16,17 +16,11 @@
         </div>
         <div class="quotes">
             <div class="image"></div>
-            <h3 class="customer"></h3>
-            <div class="stars">
-                <span class="star"><i class="icon-star"></i></span>
-                <span class="star"><i class="icon-star"></i></span>
-                <span class="star"><i class="icon-star"></i></span>
-                <span class="star"><i class="icon-star"></i></span>
-                <span class="star"><i class="icon-star"></i></span>
-            </div>
-            <p id="text"></p>
-            <button class="btn prevBtn">Prev</button>
-            <button class="btn nextBtn">Next</button>
+            <h3 class="customer">CUSTOMER NAME</h3>
+            <img src="img/stars.png" alt="stars">
+            <p id="text">For some people, life is a battle. For others, its a test. But to me life is a miracle. If one is curious enough, s/he can literally work wonders.</p>
+            <button class="btn prevBtn">p</button>
+            <button class="btn nextBtn">n</button>
         </div>
     </div>
 
