project 7 - testimonials: aligning quote sign

--- a/projects/021.js-60-projects/07-testimonials/index.html
+++ b/projects/021.js-60-projects/07-testimonials/index.html
@@ -17,8 +17,9 @@
         <div class="quotes">
             <div class="image"></div>
             <h3 class="customer">CUSTOMER NAME</h3>
-            <img src="img/stars.png" alt="stars">
+            <img class="stars" src="img/stars.png" alt="stars">
             <p id="text">For some people, life is a battle. For others, its a test. But to me life is a miracle. If one is curious enough, s/he can literally work wonders.</p>
+            <p class="bigQuote">,,</p>
             <button class="btn prevBtn">p</button>
             <button class="btn nextBtn">n</button>
         </div>
