project 7 - button "p/n" to "{/}"
I just need to relax b/c everything that looks beautiful takes some time to create

--- a/projects/021.js-60-projects/07-testimonials/index.html
+++ b/projects/021.js-60-projects/07-testimonials/index.html
@@ -20,8 +20,8 @@
             <img class="stars" src="img/stars.png" alt="stars">
             <p id="text">For some people, life is a battle. For others, its a test. But to me life is a miracle. If one is curious enough, s/he can literally work wonders.</p>
             <p class="bigQuote">,,</p>
-            <button class="btn prevBtn">p</button>
-            <button class="btn nextBtn">n</button>
+            <button class="btn prevBtn">{</button>
+            <button class="btn nextBtn">}</button>
         </div>
     </div>
 
