--- a/projects/021.js-60-projects/07-testimonials/index.html
+++ b/projects/021.js-60-projects/07-testimonials/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testimonials</title>
     <link rel="stylesheet" href="style.css" />
+    <script defer src="script.js"></script>
 </head>
 
 <body>
@@ -15,49 +16,15 @@
             <h1 class="testimon">TESTIMONIALS</h1>
         </div>
         <div class="quotes">
-            <div class="image"></div>
-            <h3 class="customer">CUSTOMER NAME</h3>
+            <div class="images"></div>
+            <h3 class="customer">Customer Name</h3>
             <img class="stars" src="img/stars.png" alt="stars">
             <p id="text">For some people, life is a battle. For others, its a test. But to me life is a miracle. If one is curious enough, s/he can literally work wonders.</p>
-            <p class="bigQuote">,,</p>
+            <p class="bigQuote"><span>,,</span></p>
             <button class="btn prevBtn">{</button>
             <button class="btn nextBtn">}</button>
         </div>
     </div>
-
-    <script>
-        const quotes = [{
-            name: 'Stephen King',
-            quote: 'Get busy living or get busy dying'
-        }, {
-            name: 'John F. Kennedy',
-            quote: 'Those who dare to fail miserabley can achieve greatly'
-        }, {
-            name: 'Abraham Lincoln',
-            quote: 'I\'m a success today because I had a friend who believed in me and I didnt have the heart to let him down'
-        }, {
-            name: 'Leonardo Da Vinci',
-            quote: 'It had long since come to my attention that people of accomplishment rarely sat back and let things happen to them. They went out and happend to things.'
-        }, {
-            name: 'Leo Tolstoy',
-            quote: 'If you want to be happy, be.'
-        }, {
-            name: 'Muhiddin',
-            quote: 'For some people, life is a battle. For others, its a test. But to me life is a miracle. If one is curious enough, s/he can literally work wonders.'
-        }]
-
-        const prevBtn = document.querySelector('.prevBtn')
-        const nextBtn = document.querySelector('.nextBtn')
-        const customer = document.querySelector('.customer')
-        const quote = document.querySelector('#quote')
-        prevBtn.addEventListener('click', changeQuote)
-
-        // function changeQuote() {
-        //     let random = Math.floor(Math.random() * quotes.length)
-        //     customer.innerHTML = quotes[random].name;
-        //     text.innerHTML = quotes[random].quote;
-        // }
-    </script>
 </body>
 
 </html>
