js project 7 - testimonials 95% done
just have to change the quotes function from random to one by one

--- a/projects/021.js-60-projects/07-testimonials/index.html
+++ b/projects/021.js-60-projects/07-testimonials/index.html
@@ -20,7 +20,7 @@
             <h3 class="customer">Customer Name</h3>
             <img class="stars" src="img/stars.png" alt="stars">
             <p id="text">For some people, life is a battle. For others, its a test. But to me life is a miracle. If one is curious enough, s/he can literally work wonders.</p>
-            <p class="bigQuote"><span>,,</span></p>
+            <p class="bigQuote">,,</p>
             <button class="btn prevBtn">{</button>
             <button class="btn nextBtn">}</button>
         </div>
