--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                 <i class="fas fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img class="img-fluid" src="img/portfolio/codepen.jpg" alt="">
+                        <img class="img-fluid" src="img/portfolio/proj-6.png" alt="">
                     </div>
                 </div>
 
@@ -134,7 +134,7 @@
                                 <i class="fas fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img class="img-fluid" src="img/portfolio/home2.jpg" alt="">
+                        <img class="img-fluid" src="img/portfolio/proj-7.jpg" alt="">
                     </div>
                 </div>
 
@@ -146,7 +146,7 @@
                                 <i class="fas fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img class="img-fluid" src="img/portfolio/acme2.jpg" alt="">
+                        <img class="img-fluid" src="img/portfolio/proj-8.png" alt="">
                     </div>
                 </div>
 
@@ -158,7 +158,7 @@
                                 <i class="fas fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img class="img-fluid" src="img/portfolio/blitz.jpg" alt="">
+                        <img class="img-fluid" src="img/portfolio/proj-9.png" alt="">
                     </div>
                 </div>
 
@@ -170,7 +170,7 @@
                                 <i class="fas fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img class="img-fluid" src="img/portfolio/blitz.jpg" alt="">
+                        <img class="img-fluid" src="img/portfolio/proj-10.png" alt="">
                     </div>
                 </div>
 
