major portfolio update - created pics for js projects

--- a/projects/015.CodePen/index.html
+++ b/projects/015.CodePen/index.html
@@ -71,7 +71,7 @@
 
             </div>
         </section>
-        <section class="preview">
+        <section id="preview">
             <iframe src="https://css-tricks.com" frameborder="0"></iframe>
         </section>
         <footer class="settings">
