portfolio update - changed the index.html names

--- a/projects/019.jsProjects/06-imageSlider/index.html
+++ b/projects/019.jsProjects/06-imageSlider/index.html
@@ -23,7 +23,7 @@
             min-height: 80vh;
             max-width: 700px;
             background: url('img/bg-1.jpg')center/cover no-repeat;
-            border-radius: 15px;
+            border-radius: 50%;
             box-shadow: 5px 10px black;
             position: relative;
         }
