portfolio update - writing the descriptions

--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
                                 <!-- Portfolio Modal - Title -->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Taco Joint</h2>
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Prodos</h2>
                                 <!-- Icon Divider -->
                                 <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
@@ -589,16 +589,11 @@
                                 <!-- Portfolio Modal - Image -->
                                 <img class="img-fluid rounded mb-5" src="img/portfolio/proj-3.png" alt="">
                                 <!-- Portfolio Modal - Text -->
-                                <p class="mb-5">This is one of the projects that I built with the help of the "Practical Front-end Web Development - Learn With Projects" course. The page is fully responsive. Check out this app landing page and download the app I built
-                                    using an android app called "Sketchware."</p>
+                                <p class="mb-5">Prodos is the very first website I built as the final project of "Thirty Days to Learn HTML and CSS". It might be ideal for small business owners or solo-entrepreneurs. No javascript was used to make this site. I used only
+                                    HTML, CSS and a little bit of bootstrap.</p>
 
-                                <button class="btn btn-primary" href="#" data-dismiss="modal">
-                  <i class="fas fa-times fa-fw"></i>
-                  Close 
-                </button>
-                                <a class="btn btn-primary" href="projects/03.prodos/index.html" target="_blank">
-                  See Page
-                </a>
+                                <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
+                                <a class="btn btn-primary" href="projects/03.prodos/index.html" target="_blank">See Page</a>
                                 </button>
                             </div>
                         </div>
@@ -622,7 +617,7 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
                                 <!-- Portfolio Modal - Title -->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Bike Gallery</h2>
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">BBC Clone</h2>
                                 <!-- Icon Divider -->
                                 <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
@@ -634,8 +629,9 @@
                                 <!-- Portfolio Modal - Image -->
                                 <img class="img-fluid rounded mb-5" src="img/portfolio/proj-5.png" alt="">
                                 <!-- Portfolio Modal - Text -->
-                                <p class="mb-5">This is another project that I built with the help of the "Practical Front-end Web Development - Learn With Projects" course. The page is fully responsive. I'm currently working on the website mentioned on this page. It
-                                    will soon be ready.</p>
+                                <p class="mb-5">BBC clone is the second project that I built as a part of "The Complete Web Developer Course 2.0". I used only HTML and CSS to build this website. Although it needs a bit more css styling, it looks pretty real, doesn't
+                                    it?
+                                </p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close 
@@ -665,7 +661,7 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
                                 <!-- Portfolio Modal - Title -->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">codepen</h2>
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Coming Soon</h2>
                                 <!-- Icon Divider -->
                                 <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
@@ -677,8 +673,7 @@
                                 <!-- Portfolio Modal - Image -->
                                 <img class="img-fluid rounded mb-5" src="img/portfolio/proj-6.png" alt="">
                                 <!-- Portfolio Modal - Text -->
-                                <p class="mb-5">This tribute page is one of the projects that I built as a part of the "Responsive Web Design Projects" course on www.freecodecamp.com. The video on this page is from my YouTube channel (Emuallim). I love creating white-board
-                                    animation videos as much as coding.</p>
+                                <p class="mb-5">This is another project that I built with the help of the "Practical Front-end Web Development - Learn With Projects" course. The page is fully responsive. It will soon be ready.</p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close 
@@ -708,7 +703,7 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
                                 <!-- Portfolio Modal - Title -->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Web Presence</h2>
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Tribute Page</h2>
                                 <!-- Icon Divider -->
                                 <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
@@ -720,8 +715,8 @@
                                 <!-- Portfolio Modal - Image -->
                                 <img class="img-fluid rounded mb-5" src="img/portfolio/proj-7.jpg" alt="">
                                 <!-- Portfolio Modal - Text -->
-                                <p class="mb-5">Prodos is the very first website I built as the final project of "Thirty Days to Learn HTML and CSS". It might be ideal for small business owners or solo-entrepreneurs. No javascript was used to make this site. I used only
-                                    HTML, CSS and a little bit of bootstrap.</p>
+                                <p class="mb-5">This tribute page is one of the projects that I built as a part of the "Responsive Web Design Projects" course on www.freecodecamp.com. The video on this page is from my YouTube channel (Emuallim). I love creating white-board
+                                    animation videos as much as coding.</p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close 
@@ -751,7 +746,7 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
                                 <!-- Portfolio Modal - Title -->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">acme web</h2>
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Serious Survey</h2>
                                 <!-- Icon Divider -->
                                 <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
@@ -763,7 +758,8 @@
                                 <!-- Portfolio Modal - Image -->
                                 <img class="img-fluid rounded mb-5" src="img/portfolio/proj-8.png" alt="">
                                 <!-- Portfolio Modal - Text -->
-                                <p class="mb-5">BBC clone is the first project that I built as a part of "The Complete Web Developer Course 2.0". I used only HTML and CSS to build this website. Although it needs a bit more css styling, it looks pretty real, doesn't it?</p>
+                                <p class="mb-5">This survey is another project that I built as a part of the "Responsive Web Design Projects" course on www.freecodecamp.com. I tried my best to make it as fun as possible because I realised that coding is a pretty formal
+                                    thing where missing single a comma might crash an entire website and humor makes coding more enjoyable, no matter the failures.</p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close 
@@ -793,7 +789,7 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
                                 <!-- Portfolio Modal - Title -->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">blitz</h2>
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">App Landing Page</h2>
                                 <!-- Icon Divider -->
                                 <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
@@ -805,8 +801,7 @@
                                 <!-- Portfolio Modal - Image -->
                                 <img class="img-fluid rounded mb-5" src="img/portfolio/proj-9.png" alt="">
                                 <!-- Portfolio Modal - Text -->
-                                <p class="mb-5">This survey is another project that I built as a part of the "Responsive Web Design Projects" course on www.freecodecamp.com. I tried my best to make it as fun as possible because I realised that coding is a pretty formal
-                                    thing where missing single a comma might crash an entire website and humor makes coding more enjoyable, no matter the failures.</p>
+                                <p class="mb-5">This is one of the projects that I built with the help of the "Practical Front-end Web Development - Learn With Projects" course. The page is fully responsive.It has a sticky header and animated elements.</p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close
@@ -848,8 +843,7 @@
                                 <!-- Portfolio Modal - Image -->
                                 <img class="img-fluid rounded mb-5" src="img/portfolio/proj-10.png" alt="">
                                 <!-- Portfolio Modal - Text -->
-                                <p class="mb-5">This survey is another project that I built as a part of the "Responsive Web Design Projects" course on www.freecodecamp.com. I tried my best to make it as fun as possible because I realised that coding is a pretty formal
-                                    thing where missing single a comma might crash an entire website and humor makes coding more enjoyable, no matter the failures.</p>
+                                <p class="mb-5">This survey is another project that I built as a part of the "Responsive Web Design Projects" course on www.freecodecamp.com.</p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close
